# agentforge-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: CLAUDE.md  development-pipeline.md
.claude/checklists/: feature-complete.md  pre-commit.md  pre-feature.md  pre-pr.md  pre-release.md
.claude/standards/: coding.md  configuration.md  docs.md  git.md  testing.md
.claude/state/: README.md  current.md  log.md
.claude/templates/: release-notes.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-linux.yml  ci-mac.yml  ci-windows.yml  ci.yml  release.yml
docs/: README.md  roadmap.md
docs/adr/: 0001-framework-name-agentforge.md  0002-multi-language-python-typescript.md  0003-three-tier-package-model.md  0004-module-discovery-via-entry-points.md  0005-copier-not-cookiecutter-for-scaffolding.md  0006-marker-header-file-ownership.md  0008-pluggable-reasoning-strategy.md  0009-capability-based-llm-client.md  0010-production-rails-framework-owned.md  0012-finding-as-protocol-with-variants.md  0014-async-first-core.md  0015-coordinated-release-train.md  0016-apache-2-license.md  0017-agents-md-as-canonical-ai-rules.md  0019-chatsession-as-wrapper-over-agent.md  0020-safety-guardrails-separate-from-evaluators.md  0021-native-typescript-scaffolding-engine.md  0022-app-passthrough-for-application-config.md  0023-governance-spine-contracts-and-umbrella-package.md  README.md
docs/adr/adr/: 0002-multi-language-python-typescript.md  0005-copier-not-cookiecutter-for-scaffolding.md  0007-abc-protocol-as-stable-surface.md  0011-memorystore-abc-and-driver-set.md  0013-configuration-is-data-not-code.md  0014-async-first-core.md  0016-apache-2-license.md  0018-named-provider-registry-and-embeddingclient.md  README.md
docs/bugs/: README.md  bug-001-scaffold-pyproject-missing-provider-extra.md  bug-002-scaffold-yaml-missing-strategy.md  bug-003-scaffold-missing-console-script.md  bug-004-stale-feat-002-error-message.md  bug-005-import-vs-distribution-name-confusion.md  bug-006-scaffold-env-not-auto-loaded.md  bug-007-upgrade-non-functional.md  bug-008-template-version-stale-distribution-name.md  bug-009-react-loop-drops-tool-calls-bedrock-validation.md  bug-010-chatsession-drops-tool-steps.md  bug-011-provider-conformance-harness.md  bug-012-mcp-adapter-dot-separator-breaks-bedrock.md  bug-013-mcpserver-from-stdio-doesnt-auto-register-tools.md  bug-014-mcpbridge-fromconfig-asyncio-run-inside-loop.md  bug-015-agentforge-mcp-missing-mcp-sdk-dependency.md  bug-017-bedrock-tool-name-regex-undocumented.md  bug-018-sqlitechathistory-update-metadata-fails-on-lazy-row.md  bug-019-guardrail-entry-string-form-not-normalised.md  bug-020-runtime-doesnt-wire-mcp-bridge.md  bug-021-add-module-uv-pip.md  bug-022-memory-from-config.md  bug-023-replay-drops-strategy.md  bug-024-version-reporting.md  bug-025-upgrade-overwrites-forked-and-custom.md
docs/design/: architecture.md  design-principles.md  module-system.md  persistence-and-orm.md  scaffolding-and-upgrade.md
docs/design/design/: design-principles.md  persistence-and-orm.md  scaffolding-and-upgrade.md
docs/enhancements/: README.md  enh-001-mcp-http-server-transport.md  enh-002-app-config-passthrough.md  enh-003-mcp-http-middleware-seam.md  enh-004-bedrock-provider-config-and-assume-role.md  enh-005-directional-graph-expansion.md  enh-006-upgrade-drift-report.md
docs/features/: README.md  feat-001-core-contracts-and-agent.md  feat-002-reasoning-strategies.md  feat-003-llm-provider-abstraction.md  feat-004-tools-system.md  feat-005-persistence-and-memory.md  feat-006-evaluators-and-benchmarks.md  feat-007-production-rails.md  feat-008-findings-and-output-shapes.md  feat-009-observability.md  feat-010-module-discovery-and-cli.md  feat-011-scaffolding-and-upgrade.md  feat-012-configuration-system.md  feat-013-mcp-integration.md  feat-014-a2a-protocol.md  feat-015-pipeline-and-tasks.md  feat-016-testing-framework.md  feat-017-cli-runtime.md  feat-018-safety-and-security-guardrails.md  feat-019-developer-experience-and-ai-rules.md  feat-020-chat-agents.md  feat-021-reranker.md  feat-022-hybrid-search.md  feat-023-graphrag-hybrid.md  feat-024-schema-migrations.md  feat-025-neo4j-vector-store.md  feat-026-application-config-extension.md  feat-027-embedded-graph-store.md  feat-028-durable-execution-and-hitl.md  feat-029-governance-identity.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md
examples/swap-by-config/: README.md  agent.py  agentforge.anthropic.yaml  agentforge.demo.yaml  agentforge.openai.yaml  demo-recording.sqlite  demo.tape  seed_recording.py  smoke.py
playbooks/: README.md  publish-to-pypi.md
scripts/: README.md  gen_release_notes.py  packaged_e2e.py  testpypi_dry_run.py
tests/: conftest.py
tests/conformance/: test_memory_in_memory.py
tests/fixtures/: README.md  thresholds.yaml
tests/integration/: test_agent_full_lifecycle.py  test_agent_with_bedrock.py  test_multi_agent_with_fake_llm.py  test_plan_execute_with_fake_llm.py  test_rag_end_to_end.py  test_react_with_fake_llm.py  test_retrieval_yaml.py  test_tot_with_fake_llm.py
