# Workspace root for the agentforge-py monorepo.
#
# This file declares the uv workspace and shared tool configuration that
# applies across every member package. Member packages have their own
# pyproject.toml under packages/<name>/ with their own [project] table.
#
# Why uv workspaces (per ADR-0003 + ADR-0015):
#   - All Tier-3 modules are versioned and released together.
#   - Cross-package PRs are atomic; one CI run validates every member.
#   - The lock file (uv.lock) is shared across the workspace, so dev
#     environments are deterministic.

[project]
name = "agentforge-workspace"
version = "0.0.0"
description = "AgentForge — Python implementation (workspace root)"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]

# The workspace root depends on its members so `uv sync` at the root
# installs every member (and their dependencies) into the shared venv.
dependencies = [
    "agentforge-core",
    "agentforge",
    "agentforge-bedrock",
    "agentforge-memory-sqlite",
    "agentforge-memory-neo4j",
    "agentforge-memory-surrealdb",
    "agentforge-memory-postgres",
    "agentforge-eval-geval",
    "agentforge-otel",
    "agentforge-testing",
    "agentforge-guard-llmguard",
    "agentforge-guard-presidio",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
agentforge-core = { workspace = true }
agentforge = { workspace = true }
agentforge-bedrock = { workspace = true }
agentforge-memory-sqlite = { workspace = true }
agentforge-memory-neo4j = { workspace = true }
agentforge-memory-surrealdb = { workspace = true }
agentforge-memory-postgres = { workspace = true }
agentforge-eval-geval = { workspace = true }
agentforge-otel = { workspace = true }
agentforge-testing = { workspace = true }
agentforge-guard-llmguard = { workspace = true }
agentforge-guard-presidio = { workspace = true }

[tool.uv]
package = false   # the root is a virtual workspace; not itself published

[dependency-groups]
dev = [
    "types-PyYAML>=6.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.115",
    "ruff>=0.8.4",
    "mypy>=1.13",
    "bandit>=1.8",
    "pre-commit>=4.0",
]

# ----------------------------------------------------------------------
# Ruff — formatter + linter (replaces black, flake8, isort, pyupgrade)
# Reference: .claude/standards/coding.md (Python section)
# ----------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["docs", ".venv", "packages/agentforge/src/agentforge/templates"]

[tool.ruff.lint]
# Enable a broad rule set; quiet the few that conflict with our idioms.
select = [
    "E", "W",        # pycodestyle
    "F",             # pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "C4",            # flake8-comprehensions
    "SIM",           # flake8-simplify
    "RET",           # flake8-return
    "RUF",           # ruff-specific
    "ASYNC",         # flake8-async
    "S",             # flake8-bandit subset
    "PT",            # flake8-pytest-style
    "TID",           # flake8-tidy-imports
    "ARG",           # unused arguments
    "PL",            # pylint subset
    "PERF",          # perflint
    "ERA",           # eradicate (commented-out code)
    "TRY",           # tryceratops
]
ignore = [
    "S101",          # `assert` — fine in tests; per-file ignore handles
    "PLR0913",       # too many arguments — ABC methods may need more
    "TRY003",        # long exception messages — clearer than codes
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S", "PLR2004", "ARG"]    # tests get more leeway
"**/conftest.py" = ["ARG"]
# ABC default-raise stubs intentionally accept the contract args but
# don't use them — the body is `raise CapabilityNotSupported`. The
# args are part of the public surface every override must accept.
"**/contracts/llm.py" = ["ARG002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ----------------------------------------------------------------------
# Mypy — strict mode (per .claude/standards/coding.md)
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
disallow_any_unimported = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
mypy_path = ["packages/agentforge-core/src", "packages/agentforge/src"]
namespace_packages = true
explicit_package_bases = true
# feat-011: Copier templates contain `{{project_slug}}` directories
# and `*.jinja`-templated Python files that aren't valid Python
# packages. Exclude them from mypy scanning.
exclude = ["packages/agentforge/src/agentforge/templates/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false   # pytest decorators

# AWS SDKs ship without py.typed markers as of writing. Allow imports
# without stubs so mypy --strict still passes against the bedrock
# package; the driver's public surface is still typed at our layer.
# `disable_error_code = no-any-unimported` is needed because anything
# annotated with botocore.exceptions.ClientError gets inferred as Any
# once the import is skipped, and strict mypy normally rejects that.
[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*", "botocore", "botocore.*", "aiobotocore", "aiobotocore.*"]
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["no-any-unimported"]

# Same suppression on our own bedrock package — `ClientError` annotations
# leak `Any` into helper signatures we type ourselves.
[[tool.mypy.overrides]]
module = "agentforge_bedrock.*"
disable_error_code = ["no-any-unimported"]

# Neo4j and SurrealDB Python SDKs ship without py.typed markers.
# Allow imports without stubs so mypy --strict still passes; the
# driver's public surface is still typed at our layer.
[[tool.mypy.overrides]]
module = ["neo4j", "neo4j.*", "surrealdb", "surrealdb.*"]
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["no-any-unimported"]

# Same suppression on our own neo4j and surrealdb packages — driver
# types leak Any into helper signatures we type ourselves.
[[tool.mypy.overrides]]
module = ["agentforge_memory_neo4j.*", "agentforge_memory_surrealdb.*"]
disable_error_code = ["no-any-unimported"]

# asyncpg and pgvector ship without py.typed markers. Allow imports
# without stubs so mypy --strict still passes against the postgres
# package; the driver's public surface is still typed at our layer.
[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "pgvector", "pgvector.*"]
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["no-any-unimported"]

# Same suppression on our own postgres package — asyncpg types leak
# Any into helper signatures we type ourselves.
[[tool.mypy.overrides]]
module = "agentforge_memory_postgres.*"
disable_error_code = ["no-any-unimported"]

# feat-018: llm-guard / presidio / nemoguardrails / Llama Guard SDKs
# either ship without py.typed or aren't installed by default
# (vendor modules import them lazily). Skip strict typechecks for
# their `*.input_scanners.*`, `*.evaluate`, etc. trees.
[[tool.mypy.overrides]]
module = [
    "llm_guard",
    "llm_guard.*",
    "presidio_analyzer",
    "presidio_analyzer.*",
    "presidio_anonymizer",
    "presidio_anonymizer.*",
    "nemoguardrails",
    "nemoguardrails.*",
]
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["no-any-unimported"]


# The opentelemetry-exporter-otlp-proto-grpc shipped package doesn't
# carry py.typed. opentelemetry-api/sdk do ship typed stubs, so this
# override is scoped narrowly to the exporter.
[[tool.mypy.overrides]]
module = ["opentelemetry.exporter.otlp.*"]
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["no-any-unimported"]

[[tool.mypy.overrides]]
module = "agentforge_otel.*"
disable_error_code = ["no-any-unimported"]

# ----------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "packages/agentforge-core/tests",
    "packages/agentforge/tests",
    "packages/agentforge-bedrock/tests",
    "packages/agentforge-memory-sqlite/tests",
    "packages/agentforge-memory-neo4j/tests",
    "packages/agentforge-memory-surrealdb/tests",
    "packages/agentforge-memory-postgres/tests",
    "packages/agentforge-eval-geval/tests",
    "packages/agentforge-otel/tests",
    "packages/agentforge-testing/tests",
    "packages/agentforge-guard-llmguard/tests",
    "packages/agentforge-guard-presidio/tests",
    "tests",
]
markers = [
    "live: tests that hit real LLM providers (excluded from pre-commit)",
    "slow: tests that take > 1s (excluded from default unit run)",
    "conformance: ABC-conformance suite that drivers must pass",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic._internal.*",
    # feat-017: CLI commands use asyncio.run inside argparse handlers.
    # Combined with test suites that also call asyncio.run (e.g. Copier
    # in new_cmd tests), Python's loop GC sometimes emits an
    # `unclosed event loop` ResourceWarning during interpreter
    # shutdown. The loops have actually been closed by `asyncio.run` —
    # the warning is a known macOS quirk where the kqueue selector
    # holds a stale reference. Demoting from error to warning so the
    # suite stays green; reproducing locally with -W error confirms
    # the warning's harmlessness.
    "default::pytest.PytestUnraisableExceptionWarning",
    "default::ResourceWarning",
]
xfail_strict = true

# ----------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------
[tool.coverage.run]
source = [
    "packages/agentforge-core/src",
    "packages/agentforge/src",
    "packages/agentforge-bedrock/src",
    "packages/agentforge-memory-sqlite/src",
    "packages/agentforge-memory-neo4j/src",
    "packages/agentforge-memory-surrealdb/src",
    "packages/agentforge-memory-postgres/src",
    "packages/agentforge-eval-geval/src",
    "packages/agentforge-otel/src",
    "packages/agentforge-testing/src",
    "packages/agentforge-guard-llmguard/src",
    "packages/agentforge-guard-presidio/src",
]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "@overload",
]

[tool.coverage.paths]
source = [
    "packages/agentforge-core/src",
    "packages/agentforge/src",
    "*/site-packages",
]

# ----------------------------------------------------------------------
# Bandit — security lint (per .claude/standards/coding.md)
# ----------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]    # assert is fine
